HUNI/trunk/VL_GWT_prototype/war/virtual_laboratory.css
/** Add css rules here for your application. */


h1 {
  font-size: 2em;
  font-weight: bold;
  color: #777777;
  margin: 40px 0px 70px;
  text-align: center;
}

.sendButton {
  display: block;
  font-size: 16pt;
}

/** Most GWT widgets already have a style name defined */
.gwt-DialogBox {
  width: 400px;
}

.dialogVPanel {
  margin: 5px;
}

.serverResponseLabelError {
  color: red;
}

/** Set ids using widget.getElement().setId("idOfElement") */
#closeButton {
  margin: 15px 6px 6px;
}

/** The div container for the whole web application */
#gwtContainerBody {
	border: 15px 6px 6px;
	border-color: #222222;
	font-family: Verdana, Times, serif;	
}

.huni-vl-root-layout {
	margin: 10px 10px 10px;
	overflow: scroll;
}

/** Header Name */
.headerName {
	font-size: 1.5em;
	color: #777777;
	text-align: left;
	margin: 15px 6px 6px;
	font-family: Verdana, Times, serif;
}

.huni-vl-page-header {
	/* padding: 5px 5px 5px 5px; */
	padding: 0;
	background-image: url('resources/images/bg-texture.png');
}

.huni-vl-page-footer {
	background: none repeat scroll 0 0 #E6E7E8;
	border-top: medium none;
	color: #636466;
	font-weight: normal;
}

.huni-vl-page-footer-credit {
	height: 99px;
	width: 314px;
	background-image: url('http://dev.huni.net.au/wp-content/uploads/2012/10/NeCTAR+Deakin-logos1.png');
}

.huni-vl-banner {
	overflow: hidden;
	width:100%;
}

.huni-vl-banner-title {
	width: 350px;
	height: "40px";
	font-family: Signika, sans-serif;
	font-size: 25px;
	color: white;	
	background-color: rgba(3, 143, 166, 0.898438);
	padding: 5px 20px 5px 20px;
}

.huni-crud-button-bar {
	margin: 5px 0px 5px 0px;
}


.huni-toolkits-tools-list {
	margin: 0px 5px 0px 5px;
}

.huni-projects-datasources-list {
	margin: 0px 5px 0px 5px;
}

.huni-tool-details {
	margin: 0px 0px 0px 0px;
	padding: 10px 10px 10px 10px;
}

.huni-tool-frame {
	width:100%;
	height:100%;
	margin:0;
	padding: 0;
	scrolling: auto;
	border: 0;
}


.huni-catalog-list {
	margin: 0px 5px 0px 5px;
}


.huni-history-list {
	margin: 0px 5px 0px 5px;
}

.huni-about-box {
	background: none repeat scroll 0 0 #EEEEEE;
	padding: 5px 5px 5px 5px;
}

.huni-about-box-title {
	font-size: 11px;
	font-weight: bold;
	margin: 0px 0px 2px 0px;
}

.huni-about-label {
	color: #666633;
	margin: 0px 2px 0px 2px;
	font-size: 10px;
}

.huni-popup {
	font-family: Signika, sans-serif;
	font-size: 12px;
	background-color: rgba(3, 143, 166, 0.898438);
	color: white;
	width: 200px;
	overflow: auto;
	padding: 5px 5px 5px 5px;
}

h1.huni-popup {
	font-size: 14px;
	color: white;
	margin: 0px 0px 0px 0px;	
	width: 180px;
	text-align: left;
}


.huni-introduction {
	margin: 0px 0px 0px 0px;
	padding: 0px 0px 0px 0px;
}

.huni-introduction-frame {
	width:100%;
	height:100%;
	margin:0;
	padding: 0;
	scrolling: auto;
	border: 0;
}

.huni-slide-show {
	margin: 0px 0px 0px 0px;
	padding: 0px 0px 0px 0px;
}

.huni-slide-show-frame {
	width:100%;
	height:100%;
	margin:0;
	padding: 0;
	scrolling: auto;
	border: 0;
}

.huni-vl-home-layout {
	width:100%;
	height:100%;
	margin:0;
	padding: 0;
	scrolling: auto;
	border: 0;
}

.huni-vl-workspace-layout {
	width:100%;
	height:100%;
	margin:0;
	padding: 0;
	scrolling: auto;
	border: 0;
}


/* Get those round corners in the decorator panel */
 .gwt-DecoratorPanel .middleCenter {
   height: 100%;
   width: 100%;
 }

